apps/uptime-kuma/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: "docker.io/louislam/uptime-kuma:2.3.2"
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-config
      volumes:
        - name: uptime-kuma-config
          persistentVolumeClaim:
            claimName: pvc-uptime-kuma-config
