apps/uptime-kuma/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ports:
    - port: 3001
  selector:
    app: uptime-kuma
