apps/uptime-kuma/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptimekuma.internal`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
